Theme fixes, minor graphical tweaks, fixed max-width for i2psnark console.
Monotone-Parent: 74a0d4739d806a7744a507cbf552d39c1d757fe0
Monotone-Revision: d3754b321aa45b22ba33ad0425462c537544b137

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-25T13:56:03
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -28,7 +28,6 @@ div.logo {
      margin: 0em;
      padding: .5em;
      text-align: center;
-     display: none !important;
 }
 
 div.toolbar {
@@ -115,4 +114,9 @@ div.messages span.notice {
 
 h1 {
      font-size: 18pt;
+}
+
+.proxyfooter{
+     font-size: 7pt;
+     display: none !important;
 }
