--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -135,6 +135,7 @@ td {
 	background-color: #fff;
 	color:#310;
   min-width: 700px !important;
+  max-width: 800px !important;
   margin: 20px;
   padding: 10px 20px 5px 20px;
   -moz-border-radius: 4px;
@@ -206,14 +207,14 @@ select {
 
 img {
   border: none;
-  margin: 0px 5px 0px 5px;
+  margin: 5px 5px 0px 5px;
   opacity: 1.0;
   line-height: 100%
 }
 
 img:hover{
   border: none;
-  margin: 0px 5px 0px 5px;
+  margin: 5px 5px 0px 5px;
   opacity: 0.5;
   line-height: 100%
 }
