Get /graphs.jsp looking a bit more presentable.
Monotone-Parent: d3754b321aa45b22ba33ad0425462c537544b137
Monotone-Revision: a8e90d6762c00c3367ce561f6f83fdae98c06267

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-25T19:47:16
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -213,6 +213,37 @@ div.messages li {
      border: 0px !important;
 }
 
+div.graphspanel {
+     padding: 15px 15px 15px 15px;
+     margin: 10px 0px;
+     background: #005;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
+     border: 1px solid #99f;
+     background: #003 url(images/darkbluebg.png);
+     -moz-box-shadow: inset 0px 0px 1px 0px #eef;
+}
+
+div.graphspanel img {
+     border: 1px solid #001;
+     padding: 3px;
+     margin: 5px;
+     text-align: center !important;
+     background: #002;
+     -moz-box-shadow: inset 0px 0px 1px 0px #eef;
+     opacity: 0.9;
+}
+
+div.graphspanel img:hover {
+     border: 1px solid #001;
+     padding: 3px;
+     margin: 5px;
+     text-align: center !important;
+     background: #002;
+     -moz-box-shadow: inset 0px 0px 1px 1px #f60;
+     opacity: 1;
+}
 table {
      border-collapse: collapse;
      width: 100%;
