Give the stats page some consideration.
Monotone-Parent: 1dd93f0f1827f0c8672922ee9c79bdcf48a5ffae
Monotone-Revision: 2d3e99211c96696b4505dafee1ea8d171278ce2d

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-28T22:53:33
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -621,7 +621,7 @@ form {}
      -moz-border-radius: 4px;
      -khtml-border-radius: 4px;
      text-align: justify;
-     -moz-box-shadow: inset 0px 0px 0px 1px #9f9;
+     -moz-box-shadow: inset 0px 0px 1px 0px #002;
      overflow-x: scroll;
  }
  
