I2PTunnels theme css tweaks.
Monotone-Parent: 2d3e99211c96696b4505dafee1ea8d171278ce2d
Monotone-Revision: 1a29373d85e989ba6a24ae0f58a39613d19f2490

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-29T09:07:00
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/default.css
+++ b/installer/resources/themes/console/dark/default.css
@@ -250,18 +250,22 @@ hr {
 
 a:link{
      color: #99f;
+     text-decoration: none;
 }
 
 a:visited{
      color: #7bb;
+     text-decoration: none;
 }
 
 a:hover{
      color: #ff6600;
+     text-decoration: underline;
 }
 
 a:active{
      color: #900;
+     text-decoration: underline;
 }
 
 input {
