I2PTunnels CSS tweaks.
Monotone-Parent: 1a29373d85e989ba6a24ae0f58a39613d19f2490
Monotone-Revision: 50461e276ebf459357d1c060222d8b317248abf9

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-29T10:24:52
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/default.css
+++ b/installer/resources/themes/console/dark/default.css
@@ -158,26 +158,31 @@ hr {
      margin-top: 8px;
      background: url(images/tabletitlelight.png) repeat: x;
      vertical-align: middle;
+     text-decoration: none;
 }
 
 .control:link {
      color: #001;
+     text-decoration: none;
 }
 
 .control:hover {
      border: 1px solid #eeeeff;
      background-color: #003;
      color: #ff6600 !important;
+     text-decoration: none;
 }
 
 .control:active {
-     border: 2px inset;
+     border: 1px inset;
      background-color: #f60;
      color: #fff !important;
+     text-decoration: none;
 }
 
 .control:visited {
      color: #001;
+     text-decoration: none;
 }
 
 .panel {
