--- a/installer/resources/themes/console/dark/i2ptunnel.css
+++ b/installer/resources/themes/console/dark/i2ptunnel.css
@@ -80,8 +80,8 @@
 #tunnelListPage textarea {
      width: 100%;
      height: 100px;
-     padding: 0 0 0 4px;
-     margin: 1px 0 4px 0;
+     padding: 4px;
+     margin: 0 0 3px 0;
      background-color: #000088;
      color: #fff;
      font-family: "Lucida Console", "Andale Mono", "Courier New", Courier, mono;
