--- a/installer/resources/themes/console/light/i2ptunnel.css
+++ b/installer/resources/themes/console/light/i2ptunnel.css
@@ -81,16 +81,16 @@
 #tunnelListPage textarea {
      width: 100%;
      height: 100px;
-     padding: 0 0 0 4px;
-     margin: 1px 0 4px 0;
+     padding: 4px;
+     margin: 2px 0 3px 0;
      background-color: #005;
-     color: #fff;
+     color: #030;
      font-family: "Lucida Console", "DejaVu Sans Mono", "Andale Mono", "Courier New", Courier, mono;
-     border: 2px inset #002;
-     font-size: 10pt !important;
+     border: 1px inset #002;
+     font-size: 9pt !important;
      font-weight: bold;
      text-align: justify !important;
-     background: url(images/darkbluetile.png);
+     background: #ddf url(images/tabletile.png);
 }
 
 #tunnelListPage .footer .control {
