Internet Explorer fix for classic console theme.
Monotone-Parent: ac710eeffb68e03941621dceac8f5a5aa6131a87
Monotone-Revision: 9ea9a1a93c4065bf7b3d21dfe400845cc3f3baea

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-29T15:03:41
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -128,15 +128,17 @@ h1 {
      display: none !important;
 }
 
+
 table {
-     border-collapse: collapse;
-     width: 100%;
+/*     border-collapse: collapse; */
+     width: 700px;
      border: 5px solid #dfd;
      margin: 5px 0px;
      cell-padding: 1px;
      font-size: 7pt;
      background: #fff;
 }
+
 
 th {
      background-color: #ccf;
@@ -166,3 +168,16 @@ hr {
      border: 0px solid #ff9;
      margin: 10px 0;
 }
+
+.statusnotes {
+     font-style: italic;
+     font-size: 8pt;
+     color: #001;
+     text-align: center;
+     border: 5px solid #dfd !important;
+     border-top: 0px !important;
+     margin: -5px 0 5px 0; 
+     padding: 7px;
+     background: #fff;
+     width: 700px;
+ }
