Internet Explorer fixes and kludges for the classic console theme.
Monotone-Parent: af68079af31b96e0cad463e97dfd57ffe5dbd6dc
Monotone-Revision: 6eca56d7d3f46c1d6734bf16fa6e9def28452476

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-29T15:54:39
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -121,6 +121,7 @@ div.messages span.notice {
 
 h1 {
      font-size: 18pt;
+     text-align: center;
 }
 
 h2 {
@@ -180,7 +181,6 @@ hr {
      font-size: 8pt;
      color: #001;
      text-align: center;
-     margin: -5px 0 5px 0; 
-     padding: 7px;
+     margin: -3px 0 0 0; 
      background: #fff;
  }
