last minute fixes
Monotone-Parent: 6eca56d7d3f46c1d6734bf16fa6e9def28452476
Monotone-Revision: 003492ff10a1379071cd70ac1afa70eb35e308c0

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-07-30T17:44:08
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -92,7 +92,7 @@ th {
   font-size: 8pt;
   border-top: 1px outset #001;
   border-bottom: 1px inset #001;  
-  background: #f91 url('.../console/images/tabletitleorangealt.png') repeat-x;
+  background: #f91 url('/themes/console/images/tabletitleorange.png') repeat-x;
   text-align: left;
 }
 
