Give the radio and checkbox icons some breathing space.
Monotone-Parent: ee96962122123f449072308efaa486bad6f74b32
Monotone-Revision: 62d98b5b45ef9f81fec27952389117de715716a8

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-31T19:40:05
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -682,6 +682,8 @@ form {}
      height: 16px;
      opacity: 1.0;
      border: 0;
+     margin: 5px 5px 5px 10px;
+     padding: 2px;
 }
 
 .optbox:hover {
@@ -693,6 +695,8 @@ form {}
      height: 16px;
      opacity: 1.0;
      border: 0;
+     margin: 5px 5px 5px 10px;
+     padding: 2px;
 }
 
 .cells {
@@ -710,6 +714,6 @@ form {}
      border-top: 1px solid #001;
      border-bottom: 1px solid #001 !important;     
      padding: 8px 2px !important;
-     font-size: 8pt;
+     font-size: 7pt;
      line-height: 110%;
 }
