--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -634,7 +634,8 @@ form {}
      height: 16px;
      opacity: 1.0;
      border: 0;
-     margin: 0 0 0 10px;
+     margin: 5px 5px 5px 10px;
+     padding: 2px;
 }
 
 .optbox:hover {
@@ -646,7 +647,8 @@ form {}
      height: 16px;
      opacity: 1.0;
      border: 0;
-     margin: 0 0 0 10px;
+     margin: 5px 5px 5px 10px;
+     padding: 2px;
 }
 
 .cells {
@@ -658,6 +660,6 @@ form {}
      background: #004 url('images/tabletitledark.png') repeat-x !important;
      border-top: 1px solid #99f;
      border-bottom: 1px solid #99f !important;     
-     font-size: 8pt;
+     font-size: 7pt;
      line-height: 110%;
 }
