Further enhancements to the configuration pages.
Monotone-Parent: 62d98b5b45ef9f81fec27952389117de715716a8
Monotone-Revision: 63db0d088985683e298e20db916726bc310092ca

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-01T01:15:12
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -536,6 +536,11 @@ input[type=text]:active, input[type=text]:hover {
      background: #001;
 }
 
+fieldset {
+overflow: hidden;
+position: relative;
+}
+
 select {
      background: #002;
      color: #eef;
@@ -636,6 +641,8 @@ form {}
      border: 0;
      margin: 5px 5px 5px 10px;
      padding: 2px;
+overflow: hidden;
+position: relative;
 }
 
 .optbox:hover {
@@ -662,4 +669,8 @@ form {}
      border-bottom: 1px solid #99f !important;     
      font-size: 7pt;
      line-height: 110%;
+}
+
+.formaction {
+     text-align: right;
 }
