More IE overflow fixes; remove max-width from i2psnark css.
Monotone-Parent: 6842e08e1b73dcd080bc0eb14fde2f1df7f678dd
Monotone-Revision: d7563ab8c00fb4c1f0ea9aafb5d1ae516737087f

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-02T13:57:29
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -94,8 +94,8 @@ div.main {
 
 
 div.main textarea {
-/*     width: 100% !important; breaks IE */
-     width: 600px;
+     width: 100% !important; 
+
 }
 
 div.news {
@@ -316,4 +316,8 @@ tt {
      font-size: 8pt;
      font-weight: bold;
      line-height: 150%;
+}
+
+.tidylist {
+     text-align: justify;
 }
