More classic theme tweaks, I2PSnark UI fixes, and enhanced proxy error messages for classic.
Monotone-Parent: d7563ab8c00fb4c1f0ea9aafb5d1ae516737087f
Monotone-Revision: 7ab28330cc302bc80fadddbec2097c8787814115

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-02T19:05:40
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -26,12 +26,11 @@ pre {
 
 div.logo {
      float: left;
-     width: 200px;
-     left: 1em;
-     top: 1em;
-     margin: 0em;
-     padding: .5em;
+     width: 175px;
+     margin: 0 0 0 20px;
+     padding: 10px;
      text-align: center;
+     border: 5px solid #dedeff;
 }
 
 div.toolbar {
@@ -75,12 +74,15 @@ div.routersummary p {
 }     
 
 div.warning {
-     margin: 0 10px 10px 205px;
-     padding: 5px 10px;
+     margin: 20px 20px 10px 240px;
+     padding: 10px 20px 20px 75px;
      background: #ffefef;
-     border: medium solid #ffafaf;
+     border: 5px solid #ffafaf;
      text-align: left;
      color: inherit;
+     background-image:url("../images/errortriangle.png");
+     background-position:15px center;
+     background-repeat:no-repeat;
 }
 
 div.main {
